--- a/08-multiformat.Rmd
+++ b/08-multiformat.Rmd
@@ -25,7 +25,7 @@ The key in the above example is the chunk option `include = knitr::is_latex_outp
 
 In Section \@ref(font-color), we used these functions to change the text color for HTML and LaTeX output. In Section \@ref(animation), we showed an animation example, which also used this trick. The code chunk that generated the animation for HTML output and static images for LaTeX output is like this:
 
-````md
+```` {.md}
 ```{r animation.hook=if (knitr::is_html_output()) 'gifski'}`r ''`
 for (i in 1:2) {
   pie(c(i %% 2, 6), col = c('red', 'yellow'), labels = NA)
@@ -35,7 +35,7 @@ for (i in 1:2) {
 
 These conditional functions can be used anywhere. You can use them in other chunk options (e.g., `eval` for conditional evaluation of the chunk), or in your R code, e.g.,
 
-````md
+```` {.md}
 ```{r, eval=knitr::is_html_output(), echo=FALSE}`r ''`
 cat('You will only see me in HTML output.')
 ```
@@ -49,9 +49,9 @@ if (knitr::is_latex_output()) {
 
 ## Display HTML widgets {#html-widgets}
 
-HTML widgets (https://htmlwidgets.org) are typically interactive JavaScript applications, which only work in HTML output. If you knit an Rmd document containing HTML widgets to a non-HTML format such as PDF or Word, you may get an error message like this:
+HTML widgets (<https://htmlwidgets.org>) are typically interactive JavaScript applications, which only work in HTML output. If you knit an Rmd document containing HTML widgets to a non-HTML format such as PDF or Word, you may get an error message like this:
 
-```md
+``` {.md}
 Error: Functions that produce HTML output found in document
 targeting X output. Please change the output type of this
 document to HTML. Alternatively, you can allow HTML output in
@@ -77,9 +77,10 @@ Then if you knit an Rmd document with HTML widgets to a non-HTML format, the HTM
 
 If you have **webshot** and PhantomJS installed (see Section \@ref(html-widgets)), you can embed any web page in the output document through `knitr::include_url()`. When you pass a URL of a web page to this function in a code chunk, it will generate an `<iframe>` (inline frame) if the output format is HTML, and a screenshot of the web page for other output formats. You can view the actual page in the inline frame. For example, Figure \@ref(fig:include-url) should show you my homepage if you are reading the online version of this book, otherwise you will see a static screenshot instead.
 
+```{=tex}
 \let\ooldhref\href
 \let\href\oldhref
-
+```
 ```{r, include-url, out.width='100%', fig.cap="Embed Yihui's homepage as an iframe or screenshot.", dev='png', cache=TRUE, screenshot.opts=list(vwidth=992)}
 knitr::include_url('https://yihui.org')
 ```
@@ -94,7 +95,7 @@ If you have published a Shiny app publicly on a server, you can use `knitr::incl
 
 The technique introduced in Section \@ref(raw-latex) is actually a general technique. You can protect any complex raw content in Markdown by specifying the content as "raw". For example, if you want to write raw HTML content, you can use the attribute `=html`:
 
-````md
+```` {.md}
 ```{=html}
 <p>Any <strong>raw</strong> HTML content works here.
 For example, here is a Youtube video:</p>
@@ -108,7 +109,7 @@ For example, here is a Youtube video:</p>
 
 The attribute name is the Pandoc output format name. If you want to know the output format name, you may check the output of the code chunk below inside an Rmd document:
 
-````md
+```` {.md}
 ```{r}`r ''`
 knitr:::pandoc_to()
 ```
@@ -129,15 +130,16 @@ plot(mpg ~ hp, data = mtcars, pch = 19)
 This simple approach works for both PDF and HTML output.
 
 ## Custom blocks {#custom-blocks}
+
 <!-- https://stackoverflow.com/questions/36293511/creating-custom-blocks-in-rstudios-bookdown -->
 
 [Section 2.7](https://bookdown.org/yihui/bookdown/custom-blocks.html) of the **bookdown** book mentioned how we can use custom blocks in R Markdown to customize the appearance of blocks of content. This can be a useful way to make some content stand out from your report or book, to make sure that your readers take away the key points from your work. Examples of how these blocks could be used include:
 
-- Display a warning message to make sure users are using up-to-date packages before running your analysis;
+-   Display a warning message to make sure users are using up-to-date packages before running your analysis;
 
-- Add a link at the beginning of your document to your GitHub repository containing the source;
+-   Add a link at the beginning of your document to your GitHub repository containing the source;
 
-- Highlight key results and findings from your analysis.
+-   Highlight key results and findings from your analysis.
 
 In this section, we will explain how to create your own custom blocks for both PDF and HTML output. They can both use the same formatting syntax in the R Markdown document, but require different configurations.
 
@@ -147,7 +149,7 @@ The syntax for custom blocks is based on Pandoc's [fenced `Div` blocks.](https:/
 
 Since the version 1.16 of the **rmarkdown** package, it has been possible to convert `Div` blocks to both HTML and LaTeX. For HTML output, all attributes of the block will become attributes of the `<div>` tag. For example, a `Div` can have an ID (after `#`), one or multiple classes (class names are written after `.`), and other attributes. The following `Div` block
 
-```md
+``` {.md}
 ::: {#hello .greeting .message width="40%"}
 Hello **world**!
 :::
@@ -155,7 +157,7 @@ Hello **world**!
 
 will be converted to the HTML code below:
 
-```html
+``` {.html}
 <div id="hello" class="greeting message" width="40%">
   Hello <strong>world</strong>!
 </div>
@@ -163,15 +165,15 @@ will be converted to the HTML code below:
 
 For LaTeX output, the first class name will be used as the LaTeX environment name, and you can provide an optional attribute named `data-latex` in the `Div` block, which will be the arguments of the environment. This attribute can be either missing or an empty string if the environment does not need arguments. We show two simple examples below. The first example uses the `verbatim` environment in LaTeX, which does not have any arguments:
 
-````md
+``` {.md}
 ::: {.verbatim data-latex=""}
 We show some _verbatim_ text here.
 :::
-````
+```
 
 Its LaTeX output will be:
 
-```tex
+``` {.tex}
 \begin{verbatim}
 We show some \emph{verbatim} text here.
 \end{verbatim}
@@ -179,7 +181,7 @@ We show some \emph{verbatim} text here.
 
 When the block is converted to HTML, the HTML code will be:
 
-```html
+``` {.html}
 <div class="verbatim">
 We show some <em>verbatim</em> text here.
 </div>
@@ -187,7 +189,7 @@ We show some <em>verbatim</em> text here.
 
 The second example uses the `center` and `minipage` environments to display some text in a centered box of half of the page width.
 
-```md
+``` {.md}
 :::: {.center data-latex=""}
 
 ::: {.minipage data-latex="{.5\linewidth}"}
@@ -200,7 +202,7 @@ its width is 50% of the width of its parent element.
 
 Note that we nested the `minipage` block in the `center` block. You need more colons for a parent block to include a child block. In the above example, we used four colons (you can use five or more) for the `center` block. The two blocks will be converted to LaTeX code below:
 
-```tex
+``` {.tex}
 \begin{center}
 \begin{minipage}{.5\linewidth}
 This paragraph will be centered on the page, and
@@ -211,7 +213,7 @@ its width is 50\% of the width of its parent element.
 
 It is up to the user to define the appearance of their `<div>` blocks via CSS for the HTML output. Similarly, for LaTeX output, you may use the command `\newenvironment` to define the environment if it has not been defined, or `\renewenvironment` to redefine an existing environment in LaTeX. In the LaTeX definitions, you can decide the appearance of these blocks in PDF. These customizations will normally be contained in their own files such as `style.css` or `preamble.tex`, and then included within the YAML options:
 
-```yaml
+``` {.yaml}
 ---
 output:
   html_document:
@@ -228,7 +230,7 @@ Next we will demonstrate a few more advanced custom blocks that use custom CSS r
 
 First, we show how to include content in a shaded box. The box has a black background with an orange frame with rounded corners. The text in the box is in white.
 
-For HTML output, we define these rules in a CSS file. If you are unfamiliar with CSS, there are plenty of free online tutorials, e.g., https://www.w3schools.com/css/.
+For HTML output, we define these rules in a CSS file. If you are unfamiliar with CSS, there are plenty of free online tutorials, e.g., <https://www.w3schools.com/css/>.
 
 ```{cat, class.source='css', engine.opts=list(file = 'css/box.css')}
 .blackbox {
@@ -257,9 +259,9 @@ For LaTeX output, we create a new environment named `blackbox` and based on the 
  {\end{shaded}}
 ```
 
-We used the **framed** package in this book because it is fairly lightweight, but it is not possible to draw a colored frame with rounded corners with this package. To achieve the latter, you will need more sophisticated LaTeX packages such as **tcolorbox** (https://ctan.org/pkg/tcolorbox), which offers a set of very flexible options for creating shaded boxes. You can find many examples in its documentation. The LaTeX environment below will create a shaded box of the similar appearance as the above CSS example:
+We used the **framed** package in this book because it is fairly lightweight, but it is not possible to draw a colored frame with rounded corners with this package. To achieve the latter, you will need more sophisticated LaTeX packages such as **tcolorbox** (<https://ctan.org/pkg/tcolorbox>), which offers a set of very flexible options for creating shaded boxes. You can find many examples in its documentation. The LaTeX environment below will create a shaded box of the similar appearance as the above CSS example:
 
-```tex
+``` {.tex}
 \usepackage{tcolorbox}
 
 \newtcolorbox{blackbox}{
@@ -272,7 +274,7 @@ We used the **framed** package in this book because it is fairly lightweight, bu
 
 Now we can use our custom box in both PDF and HTML output formats. The source code of the box is:
 
-```md
+``` {.md}
 :::: {.blackbox data-latex=""}
 ::: {.center data-latex=""}
 **NOTICE!**
@@ -285,20 +287,19 @@ been noted, and _will be reported to the authorities_!
 
 The output is:
 
-:::: {.blackbox data-latex=""}
+::: {.blackbox data-latex=""}
 ::: {.center data-latex=""}
 **NOTICE!**
 :::
 
-Thank you for noticing this **new notice**! Your noticing it has
-been noted, and _will be reported to the authorities_!
-::::
+Thank you for noticing this **new notice**! Your noticing it has been noted, and *will be reported to the authorities*!
+:::
 
 ### Including icons {#block-image}
 
 We can make custom blocks even more visually appealing by including images in them, and it can be an effective way to convey the content of the block. For the following example, we assume that we are working within a directory structure below, which is a simplified version of what is used to build this book:
 
-```text
+``` {.text}
 directory/
 ├── your-report.Rmd
 ├── style.css
@@ -311,7 +312,7 @@ directory/
 
 We show the source code and output of the example before we explain how everything works:
 
-```md
+``` {.md}
 ::: {.infobox .caution data-latex="{caution}"}
 **NOTICE!**
 
@@ -325,13 +326,12 @@ The output is:
 ::: {.infobox .caution data-latex="{caution}"}
 **NOTICE!**
 
-Thank you for noticing this **new notice**! Your noticing it has
-been noted, and _will be reported to the authorities_!
+Thank you for noticing this **new notice**! Your noticing it has been noted, and *will be reported to the authorities*!
 :::
 
 For the HTML output, we can add an image to the box through the `background-image` property in CSS. We insert the image into the background, and add enough padding on the left-hand side to avoid the text overlapping with this image. If you are using local images, the file path to the images is provided relative to the CSS file. For example:
 
-```css
+``` {.css}
 .infobox {
   padding: 1em 1em 1em 4em;
   margin-bottom: 10px;
@@ -347,7 +347,7 @@ For the HTML output, we can add an image to the box through the `background-imag
 
 Note that we used two class names, `.infobox` and `.caution`, on the outer block. The `infobox` class will be used to define the shaded box with a colored border, and the `caution` class will be used to include the image. The advantage of using two classes is that we can define more blocks with different icons without repeating the setup of the shaded box. For example, if we need a `warning` box, we only need to define the CSS rule without repeating rules in `.infobox`:
 
-```css
+``` {.css}
 .warning {
   background-image: url("images/warning.png");
 }
@@ -355,7 +355,7 @@ Note that we used two class names, `.infobox` and `.caution`, on the outer block
 
 Then you can create a `warning` box with the Markdown source code below:
 
-```md
+``` {.md}
 :::: {.infobox .warning data-latex="warning"}
 
 Include the actual content here.
@@ -390,27 +390,23 @@ Below we show more example blocks with different icons:
 ::: {.infobox .warning data-latex="{warning}"}
 **NOTICE!**
 
-Thank you for noticing this **new notice**! Your noticing it has
-been noted, and _will be reported to the authorities_!
+Thank you for noticing this **new notice**! Your noticing it has been noted, and *will be reported to the authorities*!
 :::
 
 ::: {.infobox .note data-latex="{note}"}
 **NOTICE!**
 
-Thank you for noticing this **new notice**! Your noticing it has
-been noted, and _will be reported to the authorities_!
+Thank you for noticing this **new notice**! Your noticing it has been noted, and *will be reported to the authorities*!
 :::
 
 ::: {.infobox .important data-latex="{important}"}
 **NOTICE!**
 
-Thank you for noticing this **new notice**! Your noticing it has
-been noted, and _will be reported to the authorities_!
+Thank you for noticing this **new notice**! Your noticing it has been noted, and *will be reported to the authorities*!
 :::
 
 ::: {.infobox .tip data-latex="{tip}"}
 **NOTICE!**
 
-Thank you for noticing this **new notice**! Your noticing it has
-been noted, and _will be reported to the authorities_!
+Thank you for noticing this **new notice**! Your noticing it has been noted, and *will be reported to the authorities*!
 :::
