--- a/12-knitr-misc.Rmd
+++ b/12-knitr-misc.Rmd
@@ -10,7 +10,7 @@ You can freely reuse code chunks anywhere in your source document without cut-an
 
 You can embed one code chunk in another code chunk by enclosing its label in `<<>>`, then **knitr** will automatically expand the string `<<label>>` to the actual code. For example, you can create an R function in this way:
 
-````md
+```` {.md}
 We define a function to convert Fahrenheit to Celsius.
 
 ```{r, f2c}`r ''`
@@ -43,7 +43,7 @@ The marker `<<label>>` does not have to be on a separate line. It can be embedde
 
 If you want to use exactly the same code chunk twice or more times, you may define the chunk with a label, and create more code chunks with the same label but leave the chunk content empty, e.g.,
 
-````md
+```` {.md}
 Here is a code chunk that is not evaluated:
 
 ```{r, chunk-one, eval=FALSE}`r ''`
@@ -65,7 +65,7 @@ We recommend that you do not use this method to run a code chunk more than once 
 
 The chunk option `ref.label` takes a vector of chunk labels to retrieve the content of these chunks. For example, the code chunk with the label `chunk-a` is the combination of `chunk-c` and `chunk-b` below:
 
-````md
+```` {.md}
 ```{r chunk-a, ref.label=c('chunk-c', 'chunk-b')}`r ''`
 ```
 
@@ -82,7 +82,7 @@ The chunk option `ref.label` takes a vector of chunk labels to retrieve the cont
 
 In other words, `chunk-a` is essentially this:
 
-````md
+```` {.md}
 ```{r chunk-a}`r ''`
 # this is the chunk c
 2 + 2
@@ -99,7 +99,7 @@ There is an application of this chunk option in Section \@ref(code-appendix).
 
 All code in a **knitr** document, including the code in code chunks and inline R expressions, is executed in the linear order from beginning to end. In theory, you cannot use a variable before it is assigned a value. However, in certain cases, we may want to mention the value of a variable earlier in the document. For example, it is common to present a result in the abstract of an article, but the result is actually computed later in the document. Below is an example that illustrates the idea but will not compile:
 
-````md
+```` {.md}
 ---
 title: An important report
 abstract: >
@@ -117,7 +117,7 @@ mx <- mean(x)
 
 To solve this problem, the value of the object has to be saved somewhere and loaded the next time when the document is compiled. Please note that this means the document has to be compiled at least twice. Below is one possible solution using the `saveRDS()` function:
 
-````md
+```` {.md}
 ```{r, include=FALSE}`r ''`
 mx <- if (file.exists('mean.rds')) {
   readRDS('mean.rds')
@@ -146,7 +146,7 @@ The first time when you compile this document, you will see the phrase "The valu
 
 The function `knitr::load_cache()` is an alternative solution, which allows you to load the value of an object from a specific code chunk after the chunk has been cached. The idea is similar to the above example, but it will save you the effort of manually saving and loading an object, because the object is automatically saved to the cache database, and you only need to load it via `load_cache()`. Below is the simplified example:
 
-````md
+```` {.md}
 ---
 title: An important report
 abstract: >
@@ -178,7 +178,7 @@ Sometimes we may want to exit knitting early and not at the end of the document.
 
 Below is a simple example, where we have a very simple chunk followed by a more time-consuming one:
 
-````md
+```` {.md}
 ```{r}`r ''`
 1 + 1
 knitr::knit_exit()
@@ -197,7 +197,7 @@ Normally you have to wait for 100 seconds, but since we have called `knit_exit()
 
 Normally plots generated in a code chunk are displayed beneath the code chunk, but you can choose to show them elsewhere and (optionally) hide them in the code chunk. Below is an example:
 
-````md
+```` {.md}
 We generate a plot in this code chunk but do not show it:
 
 ```{r cars-plot, dev='png', fig.show='hide'}`r ''`
@@ -211,7 +211,7 @@ After another paragraph, we introduce the plot:
 
 In the code chunk, we used the chunk option `fig.show='hide'` to hide the plot temporarily. Then in another paragraph, we called the function `knitr::fig_chunk()` to retrieve the path of the plot file, which is usually like `test_files/figure-html/cars-plot-1.png`. You need to pass the chunk label and the graphical device name to `fig_chunk()` for it to calculate the plot file path.
 
-You may see https://stackoverflow.com/a/46305297/559676 for an application of `fig_chunk()` to **blogdown** websites. This function works for any R Markdown output formats. It can be particularly helpful for presenting plots on slides, because the screen space is often limited on slide pages. You may present code on a slide, and reveal the plot on a different slide.
+You may see <https://stackoverflow.com/a/46305297/559676> for an application of `fig_chunk()` to **blogdown** websites. This function works for any R Markdown output formats. It can be particularly helpful for presenting plots on slides, because the screen space is often limited on slide pages. You may present code on a slide, and reveal the plot on a different slide.
 
 ## Modify a plot in a previous code chunk {#global-device}
 
@@ -223,7 +223,7 @@ If you want the graphical device to remain open for all code chunks, you may set
 knitr::opts_knit$set(global.device = TRUE)
 ```
 
-Please note that it is `opts_knit` instead of the more frequently used `opts_chunk`. You may see the Stack Overflow post https://stackoverflow.com/q/17502050 for an example.
+Please note that it is `opts_knit` instead of the more frequently used `opts_chunk`. You may see the Stack Overflow post <https://stackoverflow.com/q/17502050> for an example.
 
 When you no longer need this global graphical device, you can set the option to `FALSE`. Here is a full example:
 
@@ -243,7 +243,7 @@ The tricky thing about **knitr**'s caching is how it decides when to invalidate 
 
 When `xfun::cache_rds()` is called inside a code chunk in a **knitr** source document, the path of the `.rds` file is determined by the chunk option `cache.path` and the chunk label. For example, for a code chunk with the chunk label `foo` in the Rmd document `input.Rmd`:
 
-````md
+```` {.md}
 ```{r, foo}`r ''`
 res <- xfun::cache_rds({
   Sys.sleep(3)
@@ -260,7 +260,7 @@ As documented on the help page `?xfun::cache_rds`, there are two common cases in
 
 When you change the code in `cache_rds()` (e.g., from `cache_rds({x + 1})` to `cache_rds({x + 2})`), the cache will be automatically invalidated and the expression will be re-evaluated. However, please note that changes in white spaces or comments do not matter. Or generally speaking, as long as the change does not affect the parsed expression, the cache will not be invalidated. For example, the two expressions passed to `cache_rds()` below are essentially identical:
 
-```r
+``` {.r}
 res <- xfun::cache_rds({
   Sys.sleep(3  );
   x<-1:10;  # semi-colons won't matter
@@ -294,7 +294,7 @@ identical(parse_code({x <- 1}), parse_code({1 -> x}))
 
 There are two types of variables in an expression: global variables and local variables. Global variables are those created outside the expression, and local variables are those created inside the expression. If the value of a global variable in the expression has changed. For example, in the expression below, if `y` has changed, you are most likely to want to invalidate the cache and rerun the expression, otherwise you still get the result from the old value of `y`:
 
-```r
+``` {.r}
 y <- 2
 
 res <- xfun::cache_rds({
@@ -305,7 +305,7 @@ res <- xfun::cache_rds({
 
 To invalidate the cache when `y` has changed, you may let `cache_rds()` know through the `hash` argument that `y` needs to be considered when deciding if the cache should be invalidated:
 
-```r
+``` {.r}
 res <- xfun::cache_rds({
   x <- 1:10
   x + y
@@ -314,7 +314,7 @@ res <- xfun::cache_rds({
 
 When the value of the `hash` argument is changed, the 32-digit hash in the cache filename (as mentioned earlier) will change accordingly, therefore the cache will be invalidated. This provides a way to specify the cache's dependency on other R objects. For example, if you want the cache to be dependent on the version of R, you may specify the dependency like this:
 
-```r
+``` {.r}
 res <- xfun::cache_rds({
   x <- 1:10
   x + y
@@ -323,7 +323,7 @@ res <- xfun::cache_rds({
 
 Or if you want the cache to depend on when a data file was last modified:
 
-```r
+``` {.r}
 res <- xfun::cache_rds({
   x <- read.csv("data.csv")
   x[[1]] + y
@@ -332,7 +332,7 @@ res <- xfun::cache_rds({
 
 If you do not want to provide this list of global variables to the `hash` argument, you may try `hash = "auto"` instead, which tells `cache_rds()` to try to figure out all global variables automatically and use a list of their values as the value for the `hash` argument, e.g.,
 
-```r
+``` {.r}
 res <- xfun::cache_rds({
   x <- 1:10
   x + y + z  # y and z are global variables
@@ -341,7 +341,7 @@ res <- xfun::cache_rds({
 
 This is equivalent to:
 
-```r
+``` {.r}
 res <- xfun::cache_rds({
   x <- 1:10
   x + y + z  # y and z are global variables
@@ -382,7 +382,7 @@ xfun::cache_rds({
 
 By comparison, for a code chunk with the option `cache = TRUE`, everything will be cached:
 
-````md
+```` {.md}
 ```{r, cache=TRUE}`r ''`
 print("Hello world!")
 plot(cars)
@@ -390,9 +390,11 @@ plot(cars)
 ```
 ````
 
-The biggest disadvantage of **knitr**'s caching (and also what users complain most frequently about) is that your cache might be inadvertently invalidated, because the cache is determined by too many factors. For example, any changes in chunk options can invalidate the cache,^[This is the default behavior, and you can change it. See https://yihui.org/knitr/demo/cache/ for how you can make the cache more granular, so not all chunk options affect the cache.] but some chunk options may not be relevant to the computing. In the code chunk below, changing the chunk option `fig.width = 6` to `fig.width = 10` should not invalidate the cache, but it will:
+The biggest disadvantage of **knitr**'s caching (and also what users complain most frequently about) is that your cache might be inadvertently invalidated, because the cache is determined by too many factors. For example, any changes in chunk options can invalidate the cache,[^1] but some chunk options may not be relevant to the computing. In the code chunk below, changing the chunk option `fig.width = 6` to `fig.width = 10` should not invalidate the cache, but it will:
 
-````md
+[^1]: This is the default behavior, and you can change it. See <https://yihui.org/knitr/demo/cache/> for how you can make the cache more granular, so not all chunk options affect the cache.
+
+```` {.md}
 ```{r, cache=TRUE, fig.width=6}`r ''`
 # there are no plots in this chunk
 x <- rnorm(1000)
@@ -408,7 +410,7 @@ In case it is not clear, `xfun::cache_rds()` is a general way for caching the co
 
 If you frequently use some chunk options, you may save them as a group and reuse them later only using the group name. This can be done with `knitr::opts_template$set(name = list(options))`, and then you can use the chunk option `opts.label` to refer to the group name. For example:
 
-````md
+```` {.md}
 ```{r, setup, include=FALSE}`r ''`
 knitr::opts_template$set(fullwidth = list(
   fig.width = 10, fig.height = 6,
@@ -425,13 +427,13 @@ With `opts.label = 'fullwidth'`, **knitr** will read chunk options from `knitr::
 
 You can override options read from `opts.label`, e.g., if you set `fig.height = 7` in the chunk below, the actual `fig.height` will be `7` instead of `6`.
 
-````md
+```` {.md}
 ```{r, opts.label='fullwidth', fig.height=7}`r ''`
 plot(cars)
 ```
 ````
 
-You can save an arbitrary number of grouped options, e.g.,  `knitr::opts_template$set(group1 = list(...), group2 = list(...))`.
+You can save an arbitrary number of grouped options, e.g., `knitr::opts_template$set(group1 = list(...), group2 = list(...))`.
 
 ## Use `knitr::knit_expand()` to generate Rmd source {#knit-expand}
 
@@ -447,7 +449,7 @@ knitr::knit_expand(
 
 This means if have an Rmd document that contains some dynamic parts in `{{ }}`, you may apply `knit_expand()` on the document, and then call `knit()` to compile it. For example, here is a template document named `template.Rmd`:
 
-````md
+```` {.md}
 # Regression on {{i}}
 
 ```{r lm-{{i}}}`r ''`
@@ -457,7 +459,7 @@ lm(mpg ~ {{i}}, data = mtcars)
 
 We can build linear regression models using `mpg` against all other variables one by one in the `mtcars` dataset:
 
-````md
+```` {.md}
 ```{r, echo=FALSE, results='asis'}`r ''`
 src = lapply(setdiff(names(mtcars), 'mpg'), function(i) {
   knitr::knit_expand('template.Rmd')
@@ -475,7 +477,7 @@ If you find it difficult to understand this example, please see Section \@ref(re
 
 By default, **knitr** does not allow duplicate code chunk labels in the document. Duplicate labels will result in an error when the document is knitted. This occurs most frequently when a code chunk is copied and pasted within a document. You may have seen an error message like this:
 
-```text
+``` {.text}
 processing file: myfile.Rmd
 Error in parse_block(g[-1], g[1], params.src) :
   duplicate label 'cars'
