--- a/15-projects.Rmd
+++ b/15-projects.Rmd
@@ -6,7 +6,7 @@ When you work on larger projects or reports, you may not want to put all text an
 
 If your R Markdown document has a large amount of code, you may consider putting some code in external R scripts, and run these scripts via `source()` or `sys.source()`, e.g.,
 
-````md
+```` {.md}
 ```{r, include=FALSE}`r ''`
 source("your-script.R", envir = knitr::knit_global())
 # or sys.source("your-script.R", envir = knitr::knit_global())
@@ -23,7 +23,7 @@ There is a disadvantage of the `source()` method in Section \@ref(source-script)
 
 Basically, when you have one or more external scripts, you may read them and pass the content to the `code` option of a chunk. The `code` option can take a character vector and treat it as the content of the code chunk. Below we show a few examples:
 
-````md
+```` {.md}
 The `code` option can take a character vector of source code.
 For example:
 
@@ -49,7 +49,7 @@ read_files <- function(files) {
 
 You can read scripts of other languages, too. See Chapter \@ref(other-languages) for how to use other languages in R Markdown. Here are a few more examples on non-R code:
 
-````md
+```` {.md}
 Read a Python script:
 
 ```{python, code=readLines('script.py')}`r ''`
@@ -67,7 +67,7 @@ With the `code` option, you can develop complicated code in your favorite editor
 
 In Section \@ref(option-code), we introduced a way to read code into a single code chunk. In this section, we introduce one method to read multiple code chunks from an external script. The key is that you need to label the code in the script, and you can use the same labels in the code chunks in your R Markdown document, so the code in the external script can be mapped to the code chunks via the function `knitr::read_chunk()`. To label a block of code in a script, you write the label after `## ----` (optionally, you can add a series of dashes to the end of this line). One script can contain multiple labeled code blocks, e.g.,
 
-```r
+``` {.r}
 ## ---- test-a --------
 1 + 1
 
@@ -79,7 +79,7 @@ if (TRUE) {
 
 We assume that the filename of the above script is `test.R`. In the R Markdown document, we can read it via `knitr::read_chunk()`, and use the code in code chunks with the labels, e.g.,
 
-````md
+```` {.md}
 Read an external script:
 
 ```{r, include=FALSE, cache=FALSE}`r ''`
@@ -105,21 +105,21 @@ Most R Markdown output formats use the option `self_contained = TRUE` by default
 
 Sometimes you may want to keep the plot files. For example, some academic journals require authors to submit figures files separately. For R Markdown, there are three ways to avoid the automatic deletion of these files:
 
-1. Use the option `self_contained = FALSE` if the output format supports this option, e.g.,
+1.  Use the option `self_contained = FALSE` if the output format supports this option, e.g.,
 
-    ```yaml
+    ``` {.yaml}
     output:
       html_document:
         self_contained: false
     ```
 
     However, this means the plot files will not be embedded in the output document. If this is not what you want, you may consider the next two methods.
- 
-1. Enable caching for at least one code chunk (see Section \@ref(cache)). When caching is enabled, R Markdown will not delete the plot folder.
 
-1. Use the option `keep_md = TRUE` if the output format supports this option, e.g.,
+2.  Enable caching for at least one code chunk (see Section \@ref(cache)). When caching is enabled, R Markdown will not delete the plot folder.
 
-    ```yaml
+3.  Use the option `keep_md = TRUE` if the output format supports this option, e.g.,
+
+    ``` {.yaml}
     output:
       word_document:
         keep_md: true
@@ -137,7 +137,7 @@ Sometimes you may want to use another directory as the working directory. The us
 
 If you want to change the working directory for all code chunks, you may set it via a `setup` code chunk in the beginning of your document:
 
-````md
+```` {.md}
 ```{setup, include=FALSE}`r ''`
 knitr::opts_knit$set(root.dir = '/tmp')
 ```
@@ -150,7 +150,6 @@ If you use RStudio, you can also choose the working directory from the menu `Too
 ```{r, rmd-wd, echo=FALSE, fig.cap='Change the default working directory for R Markdown documents in RStudio.', fig.align='center'}
 knitr::include_graphics('images/rmd-wd.png', dpi = NA)
 ```
-
 
 ## R package vignettes {#package-vignette}
 
@@ -166,7 +165,7 @@ knitr::include_graphics('images/package-vignette.png', dpi = NA)
 
 If you do not use RStudio, below is what the YAML frontmatter typically looks like:
 
-```yaml
+``` {.yaml}
 ---
 title: "Vignette Title"
 author: "Vignette Author"
@@ -180,9 +179,9 @@ vignette: >
 
 Note that you need to change the vignette title in both the `title` field and the `\VignetteIndexEntry{}` command. Besides the above information in the vignette, you also need to do two more things in your package `DESCRIPTION` file:
 
-1. Specify `VignetteBuilder: knitr` in the `DESCRIPTION` file.
+1.  Specify `VignetteBuilder: knitr` in the `DESCRIPTION` file.
 
-1. Add `Suggests: knitr, rmarkdown` in `DESCRIPTION`.
+2.  Add `Suggests: knitr, rmarkdown` in `DESCRIPTION`.
 
 The vignette output format does not have to be HTML. It can also be PDF, so you can use `output: pdf_document`, too. Any other output formats that create HTML or PDF are also okay, such as `beamer_presentation` and `tufte::tufte_html`. However, currently R only recognizes HTML and PDF vignettes.
 
@@ -190,14 +189,14 @@ The vignette output format does not have to be HTML. It can also be PDF, so you 
 
 When you feel an R Markdown document is too long, you may consider splitting it into shorter documents, and include them as child documents of the main document via the chunk option `child`. The `child` option takes a character vector of paths to the child documents, e.g.,
 
-````md
+```` {.md}
 ```{r, child=c('one.Rmd', 'two.Rmd')}`r ''`
 ```
 ````
 
 Since **knitr** chunk options can take values from arbitrary R expressions, one application of the `child` option is the conditional inclusion of a document. For example, if your report has an appendix containing technical details that your boss may not be interested in, you may use a variable to control whether this appendix is included in the report:
 
-````md
+```` {.md}
 Change `BOSS_MODE` to `TRUE` if this report is to be read
 by the boss:
 
@@ -215,7 +214,7 @@ Or if you are writing a news report on a football game that has not taken place 
 
 Another way to compile child documents is the function `knitr::knit_child()`. You can call this function in an R code chunk or an inline R expression, e.g.,
 
-````md
+```` {.md}
 ```{r, echo=FALSE, results='asis'}`r ''`
 res <- knitr::knit_child('child.Rmd', quiet = TRUE)
 cat(res, sep = '\n')
@@ -226,7 +225,7 @@ The function `knit_child()` returns a character vector of the knitted output, wh
 
 You can even use a child document as a template, and call `knit_child()` on it repeatedly with different parameters. In the example below, we run a regression using `mpg` as the response variable and each of the rest of variables in the `mtcars` data as the explanatory variable.
 
-````md
+```` {.md}
 ```{r, echo=FALSE, results='asis'}`r ''`
 res <- lapply(setdiff(names(mtcars), 'mpg'), function(x) {
   knitr::knit_child(text = c(
@@ -244,8 +243,7 @@ cat(unlist(res), sep = '\n')
 
 To make the above example self-contained, we used the `text` argument of `knit_child()` instead of a file input to pass the R Markdown content to be knitted. You can certainly write the content to a file, and pass a path to `knit_child()` instead. For example, you can save the content below to a file named `template.Rmd`:
 
-
-````md
+```` {.md}
 ## Regression on "`r knitr::inline_expr('x')`"
 
 ```{r}`r ''`
@@ -276,7 +274,7 @@ knitr::include_graphics('images/bookdown-project.png', dpi = NA)
 
 To demonstrate the usage, we provide a minimal example consisting of three files within the same directory:
 
-```md
+``` {.md}
 directory
   |- index.Rmd
   |- 01-intro.Rmd
@@ -285,39 +283,39 @@ directory
 
 Below we show the content of each file and explain their roles.
 
-- **index.Rmd**:
+-   **index.Rmd**:
 
-  ````md
-  ---
-  title: "A Minimal bookdown Project"
-  site: bookdown::bookdown_site
-  output: bookdown::gitbook
-  ---
-  
-  # Preface {-}
-  
-  Some content
-  ````
+    ``` {.md}
+    ---
+    title: "A Minimal bookdown Project"
+    site: bookdown::bookdown_site
+    output: bookdown::gitbook
+    ---
+
+    # Preface {-}
+
+    Some content
+    ```
 
 The first file is typically called `index.Rmd`. It should be the only Rmd file in which you provide the YAML frontmatter. It should also include a special YAML field `site: bookdown::bookdown_site`, so that **rmarkdown** knows to use **bookdown** to build all Rmd files, instead of rendering a single Rmd file. You can use any **bookdown** output formats, such as `bookdown::gitbook`, `bookdown::pdf_book`, `bookdown::word_document2`, and `bookdown::epub_book`.
 
 The next two Rmd files are two chapters:
 
-- **01-intro.Rmd:**
+-   **01-intro.Rmd:**
 
-  ````md
-  # Chapter 1
-  
-  This is chapter 1.
-  ````
+    ``` {.md}
+    # Chapter 1
 
-- **02-analysis.Rmd**:
+    This is chapter 1.
+    ```
 
-  ```md
-  # Chapter 2
-  
-  This is chapter 2.
-  ```
+-   **02-analysis.Rmd**:
+
+    ``` {.md}
+    # Chapter 2
+
+    This is chapter 2.
+    ```
 
 To render these Rmd files, you should call `bookdown::render_book('index.Rmd')` instead of `rmarkdown::render()`. Under the hood, **bookdown** merges all Rmd files into a single Rmd by default and compile it. Files are merged in the alphabetical order. That is why we added numeric prefixes to filenames in the above example.
 
@@ -325,7 +323,7 @@ There are a lot of settings that you can customize for a **bookdown** project. F
 
 ## Build websites with **blogdown** {#blogdown}
 
-If you want build a website based on R Markdown, you may consider using the **blogdown** package. The easiest way to get started is to use the RStudio menu  `File -> New Project -> New Directory -> Website using blogdown`, as you can see from Figure \@ref(fig:bookdown-project). If you have never used **blogdown** before, you may use the default settings in the dialog box, otherwise you can customize things like the website theme. If you do not use RStudio, you may call the function `blogdown::new_site()` under an empty directory to create a new website.
+If you want build a website based on R Markdown, you may consider using the **blogdown** package. The easiest way to get started is to use the RStudio menu `File -> New Project -> New Directory -> Website using blogdown`, as you can see from Figure \@ref(fig:bookdown-project). If you have never used **blogdown** before, you may use the default settings in the dialog box, otherwise you can customize things like the website theme. If you do not use RStudio, you may call the function `blogdown::new_site()` under an empty directory to create a new website.
 
 A website project may contain any number of Rmd documents. They could either be normal pages or blog posts. R Markdown makes it easier for you to maintain your website because the results on your website are automatically and dynamically generated.
 
