--- a/18-references.Rmd
+++ b/18-references.Rmd
@@ -1,8 +1,6 @@
 \backmatter
 
-`r if (knitr::is_html_output()) '
-# References {-}
-'`
+`r if (knitr::is_html_output()) ' # References {-} '`
 
 ```{r include=FALSE}
 # automatically create a bib database for R packages
